Removed unused code and depreciation warnings